tentative de gestion des niveaux

--- a/app/templates/mtg-levels.hbs
+++ b/app/templates/mtg-levels.hbs
@@ -1,17 +1,17 @@
 {{#dropdown-list selected=selectedLevel item="Level" img="assets/images/rocket.png" resetView="false"}}
-<ul class="dropdown-menu map-data-level-dropdown">
-  <li class="header">
-    <div class="input-group input-group-sm">
-      {{input type="text" class="form-control" value=levelName placeholder="Level name" size="8"}}
+    <ul class="dropdown-menu map-data-level-dropdown">
+        <li class="header">
+            <div class="input-group input-group-sm">
+              {{input type="text" class="form-control" value=levelName placeholder="Level name" size="8"}}
                 <span class="input-group-btn">
                   <button type="button" class="btn btn-default" {{action 'addLevel'}}>
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                      <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
                   </button>
                 </span>
-    </div>
-  </li>
-  {{#each level in levels}}
-  <li><a  {{action 'changeLevel' level }}>{{level}}</a></li>
-  {{/each}}
-</ul>
+            </div>
+        </li>
+      {{#each level in levels itemController="mtgLevel"}}
+          <li class={{if selected 'success' ''}}><a  {{action 'changeLevel' level.model }}>{{level.model.name}}</a></li>
+      {{/each}}
+    </ul>
 {{/dropdown-list}}
