--- a/app/templates/mtg-items.hbs
+++ b/app/templates/mtg-items.hbs
@@ -1,4 +1,4 @@
-{{#dropdown-list selected=selectedItem item="Items" img="assets/images/basket.png" resetView="false"}}
+{{#dropdown-list item="Items" img="assets/images/basket.png" btn-radius="no-radius"}}
     <ul {{bind-attr class=":dropdown-menu :map-items-dropdown"}}>
         <li>
             <table class="table table-striped table-condensed">
