--- a/app/templates/mtg-items.hbs
+++ b/app/templates/mtg-items.hbs
@@ -1,7 +1,7 @@
 {{#dropdown-list item="Items" img="assets/images/basket.png" btn-radius="no-radius"}}
     <ul {{bind-attr class=":dropdown-menu :map-items-dropdown"}}>
         <li>
-            <table class="table table-striped table-condensed">
+            <table class="table table-hover table-striped table-condensed">
                 <thead>
                 <tr>
                     <th></th>
@@ -35,33 +35,20 @@
                 {{#each item in selectedTrail.items itemController="mtgItem"}}
                     <tr>
                         <td class="mtg-item-index-container">
-                            {{item.model.index}}
+                          {{item.model.index}}
                         </td>
                         <td class="mtg-item-position-container">
-                            <div class="btn-group">
-                                <label class="btn btn-default btn-sm mtg-item-position" data-toggle="tooltip" title="On the ground">
-                                  {{radio-button name=item.model.id value='P' groupValue=item.model.position }}G
-                                </label>
-                                <label class="btn btn-default btn-sm mtg-item-position" data-toggle="tooltip" title="Suspended">
-                                  {{radio-button name=item.model.id value='S' groupValue=item.model.position }}S
-                                </label>
-                                <label class="btn btn-default btn-sm mtg-item-position" data-toggle="tooltip" title="Hidden">
-                                  {{radio-button name=item.model.id value='C' groupValue=item.model.position }}H
-                                </label>
-                            </div>
+                          {{item.model.position}}
                         </td>
                         <td class="item-type">
-                          {{view "select" class="form-control input-sm" content=itemTypes value=item.model.type}}
+                          {{item.model.type}}
                         </td>
                         <td>
-                          {{input type="text" class="form-control input-sm" value=item.model.description placeholder="Item description" size="14"}}
+                          {{item.model.description}}
                         </td>
                         <td class="btn-group">
                             <button type="button" class="btn btn-success btn-sm" {{bind-attr disabled=isPositionDisabled}} {{action 'positionItem' item.model}}>
                                 <span class="glyphicon glyphicon-record" aria-hidden="true"></span>
-                            </button>
-                            <button type="button" class="btn btn-info btn-sm" {{action 'saveItem' item.model}}>
-                                <span class="glyphicon glyphicon-save" aria-hidden="true"></span>
                             </button>
                             <button type="button" class="btn btn-danger btn-sm" {{action 'deleteItem' item.model}}>
                                  <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
