--- a/app/templates/map-draw.hbs
+++ b/app/templates/map-draw.hbs
@@ -6,7 +6,7 @@
                 <img src="assets/images/point.png" class="inverted" width="12" height="12"/>
             </button>
             <button type="button" data-toggle="tooltip" title="Add description"
-                    class="hidden btn btn-success map-draw-marker" {{action 'toggleDraw' 'Marker'}}>
+                    class=" btn btn-success map-draw-marker" {{action 'toggleDraw' 'Marker'}}>
                 <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
             </button>
             <button type="button" data-toggle="tooltip" title="Draw a Zone"
