--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -65,6 +65,12 @@ input {
   padding: 5px;
 }
 
+.map-info {
+  background: rgba(255, 255, 255, 0.85);
+  border-radius: 4px;
+  padding: 5px;
+}
+
 .map-location {
   z-index: 100;
   position: absolute;
