--- a/app/templates/map-info.hbs
+++ b/app/templates/map-info.hbs
@@ -1,3 +1,3 @@
 <div class="map-info">
-    {{selectedTrail.name}} [Level:{{selectedTrail.level.name}}, Objects: {{selectedTrail.items.length}}]
+    {{selectedTrail.name}} [<img src="assets/images/rocket.png"/> {{selectedTrail.level.name}}, <img src="assets/images/basket.png"/> {{selectedTrail.items.length}}, <span class="glyphicon glyphicon-road" aria-hidden="true"></span> {{selectedTrail.length}} ]
 </div>
