correction d'un probleme du au chargement de la carte et de l'outil de dessin. Lorsque la carte etait trop rapide à charger, l'outil de dessin etait n'etait pas notifié avec la carte et elle vallait null

--- a/app/templates/map-info.hbs
+++ b/app/templates/map-info.hbs
@@ -1,3 +1,10 @@
-<div class="map-info">
-    {{selectedTrail.name}} [<img src="assets/images/rocket.png"/> {{selectedTrail.level.name}}, <img src="assets/images/basket.png"/> {{selectedTrail.items.length}}, <span class="glyphicon glyphicon-road" aria-hidden="true"></span> {{selectedTrail.length}} ]
-</div>
+{{#if selectedTrail }}
+    <div class="map-info">
+      {{selectedTrail.name}}
+        <span class="map-info-detail">
+            <img src="assets/images/rocket.png"/> {{selectedTrail.level.name}},
+            <img src="assets/images/basket.png"/> {{selectedTrail.items.length}},
+            <span class="glyphicon glyphicon-road" aria-hidden="true"></span> {{selectedTrail.length}}
+        </span>
+    </div>
+{{/if}}
