--- a/app/templates/map-info.hbs
+++ b/app/templates/map-info.hbs
@@ -5,6 +5,7 @@
             <img src="assets/images/rocket.png"/> {{selectedTrail.level.name}},
             <img src="assets/images/basket.png"/> {{selectedTrail.items.length}},
             <span class="glyphicon glyphicon-road" aria-hidden="true"></span> {{selectedTrail.length}}
+            <span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span> {{selectedTrail.location}}
         </span>
     </div>
 {{/if}}
