--- a/app/templates/map.hbs
+++ b/app/templates/map.hbs
@@ -1,15 +1,15 @@
-{{render "mapLocation" mapLocation}}
+{{render "mapLocation" controller="mapLocation"}}
 {{view id="map"}}
 <div class="logo">
     <img src="assets/images/canimap_cross_on_dog.png"/>
 </div>
 <div class="top-container btn-group">
-  {{render "mapData" mapData}}
-  {{render "mapWeather" mapWeather}}
+  {{render "mapData" controller="mapData"}}
+  {{render "mapWeather" controller="mapWeather"}}
   {{view "mapLayers"}}
   <div class="mtg-mode">
       <a role="button" class="btn btn-success radius-right" data-toggle="tooltip"
-         title="Switch to basic mode" href="/">
+         title="Switch to basic mode" {{bind-attr href=basicURL}}>
           Basic
       </a>
   </div>
