--- a/app/templates/map-draw.hbs
+++ b/app/templates/map-draw.hbs
@@ -1,23 +1,23 @@
 {{#dropdown-list item="Draw" icon="pencil" btn-radius="no-radius"}}
     <ul class="dropdown-menu map-draw-dropdown">
         <li class="btn-group">
-            <button type="button" data-toggle="tooltip" title="Draw a Point"
+            <button type="button" data-toggle="tooltip" data-original-title="Draw a Point"
                     class="btn btn-danger map-draw-point" {{action 'toggleDraw' 'Point'}}>
                 <img src="assets/images/point.png" class="inverted" width="12" height="12"/>
             </button>
-            <button type="button" data-toggle="tooltip" title="Add description"
+            <button type="button" data-toggle="tooltip" data-original-title="Add description"
                     class="hidden btn btn-success map-draw-marker" {{action 'toggleDraw' 'Marker'}}>
                 <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
             </button>
-            <button type="button" data-toggle="tooltip" title="Draw a Zone"
+            <button type="button" data-toggle="tooltip" data-original-title="Draw a Zone"
                     class="btn btn-primary map-draw-polygon" {{action 'toggleDraw' 'Polygon'}}>
                 <span class="glyphicon glyphicon-retweet" aria-hidden="true"></span>
             </button>
-            <button type="button" data-toggle="tooltip" title="Draw the Trailer's Trail"
+            <button type="button" data-toggle="tooltip" data-original-title="Draw the Trailer's Trail"
                     class="btn btn-pink map-draw-trailer" {{action 'toggleDraw' 'Trailer'}}>
                 <img src="assets/images/walk.png" class="inverted" width="16" height="16"/>
             </button>
-            <button type="button" data-toggle="tooltip" title="Draw the Team's Trail"
+            <button type="button" data-toggle="tooltip" data-original-title="Draw the Team's Trail"
                     class="btn btn-warning map-draw-team" {{action 'toggleDraw' 'Team'}}>
                 <img src="assets/images/track.png" class="inverted" width="16" height="16"/>
             </button>
@@ -43,7 +43,7 @@
               </ul>
           {{/dropdown-list}}
             <button type="button" class="btn btn-info mtg-modify" data-toggle="tooltip"
-                    title="Click on an item to modify it" {{action 'toggleModify'}}>
+                    data-original-title="Click on an item to modify it" {{action 'toggleModify'}}>
                 <img src="assets/images/hand.png" width="16" height="16"/>
             </button>
         </li>
