--- a/app/templates/map.hbs
+++ b/app/templates/map.hbs
@@ -5,6 +5,7 @@
 </div>
 <div class="top-container btn-group">
   {{render "mapData" controller="mapData"}}
+  {{render "mapDataSave" controller="mapData"}}
   {{render "mapWeather" controller="mapWeather"}}
   {{view "mapLayers"}}
   <div class="mtg-mode">
