--- a/app/templates/map-layers.hbs
+++ b/app/templates/map-layers.hbs
@@ -1,4 +1,4 @@
-{{#dropdown-list item="Layers" img="assets/images/layers.png" btn-radius="no-radius"}}
+{{#dropdown-list item="Layers" img="assets/images/layers.png" btn-radius="no-radius" toggle="tooltip" title="Select the map layers, drag the handle to change the opacity"}}
     <ul {{bind-attr class=":dropdown-menu :map-layers-dropdown"}}>
         <li>
             <table class="table table-striped table-condensed">
