--- a/app/templates/mtg-items.hbs
+++ b/app/templates/mtg-items.hbs
@@ -1,4 +1,4 @@
-{{#dropdown-list item="Items" img="assets/images/basket.png" btn-radius="no-radius"}}
+{{#dropdown-list item="Items" img="assets/images/basket.png" btn-radius="no-radius" toggle="tooltip" title="Manage the trail's items"}}
     <ul {{bind-attr class=":dropdown-menu :map-items-dropdown"}}>
         <li>
             <table class="table table-hover table-striped table-condensed">
