--- a/app/templates/components/dropdown-list.hbs
+++ b/app/templates/components/dropdown-list.hbs
@@ -1,4 +1,4 @@
-<button type="button" {{bind-attr class=":btn btnColorName :dropdown-toggle btnClassName btnRadius"}} {{action "toggle"}}>
+<button type="button" data-toggle={{if toggle toggle ""}} title={{if title title ""}} {{bind-attr class=":btn btnColorName :dropdown-toggle btnClassName btnRadius"}} {{action "toggle"}}>
 {{#if icon}}
   <span {{bind-attr class=":glyphicon glyphicon"}} aria-hidden="true"></span>
 {{else}}
