--- a/app/templates/map-data.hbs
+++ b/app/templates/map-data.hbs
@@ -1,5 +1,5 @@
 <!--<form class="form-inline btn-group">-->
-{{#dropdown-list item="Trails" img="assets/images/track.png"}}
+{{#dropdown-list item="Trails" img="assets/images/track.png" toggle="tooltip" title="Create or select a trail"}}
     <ul class="dropdown-menu map-data-trails-dropdown">
         <li>
             <table class="table table-hover table-striped table-condensed">
@@ -30,10 +30,10 @@
 {{/dropdown-list}}
 {{#if selectedTrail}}
     <!--  data-toggle="tooltip" title="Tools related to your trails" -->
-    {{#dropdown-list item="Tools" icon="th" btn-radius="no-radius"}}
+    {{#dropdown-list item="Tools" icon="th" btn-radius="no-radius" toggle="tooltip" title="Tools related to the selected trail"}}
         <ul class="dropdown-menu map-data-tools-dropdown">
             <li class="btn-group">
-              {{#dropdown-list item="Import" icon="import"}}
+              {{#dropdown-list item="Import" icon="import" toggle="tooltip" title="Import a path related ot the selected trail"}}
                   <ul class="dropdown-menu map-data-import-dropdown">
                       <li>
                           <table class="table table-hover table-condensed">
@@ -65,7 +65,7 @@
               {{/dropdown-list}}
               {{view 'mtgLevels'}}
               {{view 'mtgItems'}}
-              {{#dropdown-list item="Export" icon="export" }}
+              {{#dropdown-list item="Export" icon="export" toggle="tooltip" title="Export the path related ot the trailer's trail"}}
                   <ul class="dropdown-menu map-data-export-dropdown">
                     {{#each format in formats}}
                         <li><a {{action 'exportTrail' format selectedTrail}}>{{format}}</a></li>
