--- a/app/templates/map-weather.hbs
+++ b/app/templates/map-weather.hbs
@@ -1,4 +1,4 @@
-{{#dropdown-list item="Weather" img="assets/images/weather.png" color="default" btn-radius="no-radius"}}
+{{#dropdown-list item="Weather" img="assets/images/weather.png" color="default" btn-radius="no-radius" toggle="tooltip" title="Select the weather registered from the map's center"}}
   <ul class="dropdown-menu">
     <li>
       <table class="table table-striped table-condensed">
